@@ -3,6 +3,9 @@ Changelog
 
 7.3-dev - (unreleased)
 ----------------------
+* Bug fix: fixed "Archive/Unarchive" content rule action not to crash when there
+  are no versions
+  [ghicaale refs #19918]
 
 7.2 - (2014-05-13)
 ------------------
